@@ -1,4 +1,6 @@
 #include "dfsch/conditions.h"
+#include "dfsch/magic.h"
+#include <stdio.h>
 
 
 dfsch_object_t* dfsch_make_condition(dfsch_type_t* type){
@@ -10,7 +12,7 @@ dfsch_object_t* dfsch_make_condition(dfsch_type_t* type){
 dfsch_object_t* dfsch_condition_field(dfsch_object_t* condition,
                                       dfsch_object_t* name){
   dfsch_object_t* al;
-  if (DFSCH_INSTANCE_P(condition, DFSCH_CONDITION_TYPE)){
+  if (!DFSCH_INSTANCE_P(condition, DFSCH_CONDITION_TYPE)){
     dfsch_error("exception:not-a-condition", condition);
   }
   al = dfsch_assq(name, ((dfsch__condition_t*)condition)->fields);
@@ -23,7 +25,7 @@ dfsch_object_t* dfsch_condition_field(dfsch_object_t* condition,
 void dfsch_condition_put_field(dfsch_object_t* condition,
                                dfsch_object_t* name,
                                dfsch_object_t* value){
-  if (DFSCH_INSTANCE_P(condition, DFSCH_CONDITION_TYPE)){
+  if (!DFSCH_INSTANCE_P(condition, DFSCH_CONDITION_TYPE)){
     dfsch_error("exception:not-a-condition", condition);
   }
 
@@ -41,10 +43,26 @@ void dfsch_condition_put_field_cstr(dfsch_object_t* condition,
   return dfsch_condition_put_field(condition, dfsch_make_symbol(name), value);
 }
 dfsch_object_t* dfsch_condition_fields(dfsch_object_t* condition){
-  if (DFSCH_INSTANCE_P(condition, DFSCH_CONDITION_TYPE)){
+  if (!DFSCH_INSTANCE_P(condition, DFSCH_CONDITION_TYPE)){
     dfsch_error("exception:not-a-condition", condition);
   }
   return ((dfsch__condition_t*)condition)->fields;;
+}
+
+dfsch_object_t* dfsch_condition(dfsch_type_t* type, ...){
+  va_list al;
+  dfsch_object_t* c = dfsch_make_condition(type);
+  char* name;
+
+  dfsch_condition_put_field_cstr(c, "stack-trace", dfsch_get_stack_trace());
+
+  va_start(al, type);
+  while (name = va_arg(al, char*)){
+    dfsch_condition_put_field_cstr(c, name, va_arg(al, dfsch_object_t*));
+  }
+  va_end(al);
+
+  return c;
 }
 
 dfsch_type_t dfsch_condition_type = 
@@ -58,6 +76,31 @@ dfsch_type_t dfsch_error_type =
 
 dfsch_type_t dfsch_runtime_error_type = 
   DFSCH_CONDITION_TYPE_INIT(DFSCH_ERROR_TYPE, "runtime-error");
+
+void dfsch_signal(dfsch_object_t* condition){
+  dfsch__handler_list_t* save;
+  dfsch__handler_list_t* i;
+  dfsch__thread_info_t* ti = dfsch__get_thread_info();
+
+  i = save = ti->handler_list;
+
+  while (i){
+    if (DFSCH_INSTANCE_P(condition, i->type)){
+      ti->handler_list = i->own_handlers;
+      dfsch_apply(i->handler, dfsch_cons(condition, NULL));
+    }
+    i = i->next;
+  }
+
+
+  if (DFSCH_INSTANCE_P(condition, DFSCH_ERROR_TYPE)){
+    fputs("Unhandled error condition!\n\n", stderr);
+    fprintf(stderr, "%s\n", dfsch_obj_write(condition, 10, 1));
+    abort();
+  }
+
+  ti->handler_list = save;
+}
 
 typedef struct restart_t {
   dfsch_type_t* type;
